Voici mon projet

--- a/test.html
+++ b/test.html
@@ -1,5 +1,9 @@
 <body>
     <h1>BIENVENUE CHEZ HARVELY COMPANY</h1>
     <p>La formation s'est deroule sans accro</p>
+    <ul>
+        <li>Faty</li>
+        <li>Thesy</li>
+    </ul>
 </body>
 
